fix(code-block): word-break for softWrap mode (#DS-3032)

--- a/packages/components/code-block/code-block.scss
+++ b/packages/components/code-block/code-block.scss
@@ -114,6 +114,7 @@
     &.kbq-code-block_soft-wrap {
         .kbq-code-block__code {
             white-space: pre-wrap;
+            word-break: break-all;
         }
     }
 
